Added retrieval of messages from DB Added opening of messages (currently in JSON format) Added preferences button (TBC func.)

--- a/app/src/main/res/layout/activity_messages_menu.xml
+++ b/app/src/main/res/layout/activity_messages_menu.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin"
-        android:onClick="switchToNewMessage"
+        android:onClick="sendMessage"
         android:layout_marginBottom="16dp"
         android:src="@android:drawable/ic_input_add"
         android:contentDescription="TODO" />
