--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,18 +2,16 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Powerline" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+         <item name="colorPrimary">@color/pl_primary</item>
         <!-- <item name="colorPrimary">@color/pl_yellow</item> -->
     </style>
 
     <style name="Theme.Powerline" parent="Base.Theme.Powerline" />
-
     <style name="Theme.Powerline.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
     <style name="Theme.Powerline.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
     <style name="Theme.Powerline.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
