Swapped to RecyclerView Updated version code

--- a/app/src/main/res/layout/activity_messages_menu.xml
+++ b/app/src/main/res/layout/activity_messages_menu.xml
@@ -22,17 +22,11 @@
         android:src="@android:drawable/ic_input_add"
         android:contentDescription="TODO" />
 
-    <ScrollView
-        android:id="@+id/scroll_view"
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:id="@+id/linear_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
+        android:layout_gravity="bottom|end"
+        android:id="@+id/message_recycler_view"
+        android:layout_height="match_parent" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
