--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,4 +97,17 @@
         app:layout_constraintTop_toBottomOf="@+id/CreateAccountButton"
         app:layout_constraintVertical_bias="0.951" />
 
+    <TextView
+        android:id="@+id/invalidInput"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Invalid Username or Password"
+        android:visibility="invisible"
+        android:textColor="#ED1C24"
+        app:layout_constraintBottom_toTopOf="@+id/emailInput"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/powerlineTitle"
+        app:layout_constraintVertical_bias="0.828" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
