Added contact display

--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -127,6 +127,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/generate_username"
+        android:textColor="@color/white"
         android:onClick="generateUsername"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -138,6 +139,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="260dp"
         android:text="@string/submit"
+        android:textColor="@color/white"
         android:onClick="submitNewUser"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -150,6 +152,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
         android:text="@string/back"
+        android:textColor="@color/white"
         android:onClick="onBack"
         app:layout_constraintBottom_toBottomOf="@+id/submitButton"
         app:layout_constraintEnd_toStartOf="@+id/submitButton"
