--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -10,7 +10,6 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:contentDescription="Icon" />
@@ -18,19 +17,29 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="24dp"
+        android:layout_marginTop="16dp"
         android:layout_toEndOf="@id/imageView"
         android:layout_toRightOf="@id/imageView"
-        android:gravity="center_vertical"
-        android:textSize="16sp"/>
+        android:textSize="18dp"/>
+
+    <TextView
+        android:id="@+id/message_preview_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_toEndOf="@id/imageView"
+        android:layout_below="@id/textView"
+        android:layout_toRightOf="@id/imageView"
+        android:textSize="14sp"/>
 
     <TextView
         android:id="@+id/dateView"
+        android:layout_alignParentEnd="true"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginLeft="376dp"
-        android:layout_toRightOf="@id/imageView"
-        android:gravity="right"
+        android:layout_toEndOf="@id/imageView"
+        android:layout_alignTop="@id/imageView"
+        android:layout_marginLeft="240dp"
         android:textSize="16sp" />
 
 </RelativeLayout>
