--- a/app/src/main/res/layout/contact_list_item.xml
+++ b/app/src/main/res/layout/contact_list_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="?android:attr/listPreferredItemHeightLarge">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/left_message_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
@@ -15,30 +15,30 @@
         android:contentDescription="Icon" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/left_author"
         android:layout_width="wrap_content"
         android:layout_height="24dp"
         android:layout_marginTop="16dp"
-        android:layout_toEndOf="@id/imageView"
-        android:layout_toRightOf="@id/imageView"
+        android:layout_toEndOf="@id/left_message_image"
+        android:layout_toRightOf="@id/left_message_image"
         android:textSize="18dp"/>
 
     <TextView
-        android:id="@+id/message_preview_view"
+        android:id="@+id/right_message"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_toEndOf="@id/imageView"
-        android:layout_below="@id/textView"
-        android:layout_toRightOf="@id/imageView"
+        android:layout_toEndOf="@id/left_message_image"
+        android:layout_below="@id/left_author"
+        android:layout_toRightOf="@id/left_message_image"
         android:textSize="14sp"/>
 
     <TextView
-        android:id="@+id/dateView"
+        android:id="@+id/left_message"
         android:layout_alignParentEnd="true"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_toEndOf="@id/imageView"
-        android:layout_alignTop="@id/imageView"
+        android:layout_toEndOf="@id/left_message_image"
+        android:layout_alignTop="@id/left_message_image"
         android:layout_marginLeft="240dp"
         android:textSize="16sp" />
 
