--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -42,6 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin"
+        android:onClick="switchToSendMessage"
         android:layout_marginBottom="16dp"
         app:srcCompat="@android:drawable/ic_menu_add" />
 
