Added contact search Added send message to non-contact

--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:theme="@style/Theme.Powerline.AppBarOverlay">
 
+
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
@@ -26,11 +27,22 @@
                 android:layout_height="wrap_content"
                 android:text="Groups" />
         </com.google.android.material.tabs.TabLayout>
+
+        <SearchView
+            android:layout_width="match_parent"
+            android:id="@+id/contact_search_view"
+            android:queryHint="Enter a username or email to search"
+            android:background="?android:attr/colorEdgeEffect"
+            android:iconifiedByDefault="false"
+            android:layout_height="match_parent" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/contact_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="840dp"
+            android:layout_height="800dp"
             android:layout_gravity="bottom|end" />
+
+
     </com.google.android.material.appbar.AppBarLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
