--- a/app/src/main/res/layout/activity_send_message_v1.xml
+++ b/app/src/main/res/layout/activity_send_message_v1.xml
@@ -45,4 +45,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/to_textview"
         app:layout_constraintTop_toBottomOf="@+id/sendMessage_tv" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/sendMsg_contact_rv"
+        android:layout_width="409dp"
+        android:layout_height="786dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
