--- a/app/src/main/res/layout/activity_messages_menu.xml
+++ b/app/src/main/res/layout/activity_messages_menu.xml
@@ -36,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:text="@string/messages"
-            android:textSize="25dp"
+            android:textSize="25sp"
             app:layout_anchorGravity="top|center"
             app:layout_constraintBottom_toTopOf="@+id/message_search_view"
             app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +63,6 @@
             android:layout_gravity="bottom|end"
             app:layout_constraintTop_toBottomOf="@id/message_search_view"
             app:layout_constraintBottom_toBottomOf="parent"
-
             tools:layout_editor_absoluteX="0dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
