--- a/app/src/main/res/layout/activity_messages_menu.xml
+++ b/app/src/main/res/layout/activity_messages_menu.xml
@@ -35,7 +35,7 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:text="@string/messages"
+            android:text="Messages - [E2E Encry. Disabled!]"
             android:textSize="25sp"
             app:layout_anchorGravity="top|center"
             app:layout_constraintBottom_toTopOf="@+id/message_search_view"
