--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -205,6 +205,7 @@
             android:layout_weight="1"
             android:background="@drawable/fb_bg"
             android:padding="6dp"
+            android:onClick="testActivity"
             android:src="@drawable/facebook_logo" />
 
         <ImageView
